# ros2_robotiq_3f_gripper

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci-ros-lint.yml  industrial_ci.yml
robotiq_3f_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
robotiq_3f_controllers/include/robotiq_3f_controllers/: robotiq_3f_controller.hpp  robotiq_3f_gripper_action_controller.hpp  robotiq_3f_status_publisher_controller.hpp
robotiq_3f_controllers/src/: robotiq_3f_controller.cpp  robotiq_3f_gripper_action_controller.cpp  robotiq_3f_status_publisher_controller.cpp
robotiq_3f_description/: CMakeLists.txt  package.xml
robotiq_3f_description/config/: controllers.yaml
robotiq_3f_description/launch/: robotiq_3f_gripper.launch.py  robotiq_3f_gripper.launch.xml  visualize_description.launch.xml
robotiq_3f_description/meshes/visual/: link_1.dae  link_2.blend1  link_2.dae  link_3.dae  palm.dae
robotiq_3f_description/urdf/: example.urdf.xacro  robotiq_3f_driver_ros2_control.xacro  robotiq_3f_gripper.xacro  robotiq_3f_gripper_finger_macro.xacro  robotiq_3f_gripper_macro.xacro
robotiq_3f_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
robotiq_3f_driver/include/robotiq_3f_driver/: default_driver.hpp  default_driver_factory.hpp  default_driver_utils.hpp  default_serial_factory.hpp  driver.hpp  driver_factory.hpp  hardware_interface_utils.hpp  robotiq_3f_gripper_hardware_interface.hpp  serial_factory.hpp
robotiq_3f_driver/include/robotiq_3f_driver/fake/: fake_driver.hpp
robotiq_3f_driver/src/: default_driver.cpp  default_driver_factory.cpp  default_driver_main.cpp  default_driver_utils.cpp  default_serial.cpp  default_serial_factory.cpp  hardware_interface_utils.cpp  robotiq_3f_driver_node.cpp  robotiq_3f_gripper_hardware_interface.cpp
robotiq_3f_driver/src/fake/: fake_driver.cpp
robotiq_3f_driver/tests/: CMakeLists.txt  test_data_utils.cpp  test_default_driver.cpp  test_default_driver_factory.cpp  test_default_serial_factory.cpp  test_robotiq_3f_gripper_hardware_interface.cpp
robotiq_3f_driver/tests/mock/: mock_driver.hpp  mock_serial.hpp
robotiq_3f_hardware_tests/: CMakeLists.txt  README.md  package.xml
robotiq_3f_hardware_tests/src/: activate.cpp  break.cpp  deactivate.cpp  get_status.cpp  grip.cpp  release.cpp  ros2_robotiq_3f_controllers_demo.py
robotiq_3f_interfaces/: package.xml
robotiq_3f_interfaces/msg/: SimpleControlCommand.msg  Status.msg
robotiq_3f_interfaces/srv/: ChangeGraspingMode.srv
robotiq_3f_moveit_plugin/: CMakeLists.txt  moveit_ros_control_interface_plugins.xml  package.xml
robotiq_3f_moveit_plugin/src/: robotiq_3f_gripper_controller_allocator.cpp
robotiq_3f_msgs/: CMakeLists.txt  package.xml
robotiq_3f_msgs/msg/: ObjectDetectionStatuses.msg
robotiq_3f_transmission_plugins/: CMakeLists.txt  package.xml
robotiq_3f_transmission_plugins/include/robotiq_3f_transmission_plugins/: individual_control_transmission.hpp  individual_control_transmission_loader.hpp
robotiq_3f_transmission_plugins/src/: individual_control_transmission.cpp  individual_control_transmission_loader.cpp
